# alpaca-project

./: README.md  setup_env.sh
alpaca_crewai/: .gitignore  README.md  pyproject.toml
alpaca_crewai/src/alpaca_crewai/: crew.py  main.py
