[project]
name = "alpaca_crewai"
version = "0.1.0"
description = "alpaca-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
alpaca_crewai = "alpaca_crewai.main:run"
run_crew = "alpaca_crewai.main:run"
train = "alpaca_crewai.main:train"
replay = "alpaca_crewai.main:replay"
test = "alpaca_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
